[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlaceholderBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.752941, 1, 0.129412 )

[node name="CenterContainer" type="CenterContainer" parent="PlaceholderBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -34.0
margin_right = 53.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlaceholderBackground/CenterContainer"]
margin_right = 106.0
margin_bottom = 68.0

[node name="ResumeBtn" type="Button" parent="PlaceholderBackground/CenterContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 20.0
text = "Resume Game"

[node name="RestartBtn" type="Button" parent="PlaceholderBackground/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 44.0
text = "Restart Game"

[node name="QuitBtn" type="Button" parent="PlaceholderBackground/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
text = "Quit Game"

[connection signal="pressed" from="PlaceholderBackground/CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PlaceholderBackground/CenterContainer/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="PlaceholderBackground/CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
